Fix trace table bottom being clipped from view

--- a/resources/day8/re_frame/trace/main.css
+++ b/resources/day8/re_frame/trace/main.css
@@ -259,15 +259,16 @@
 #--re-frame-trace-- .nav {
   background: #efeef1;
   color: #222222;
-}
-#--re-frame-trace-- .panel-content-top {
-  flex: 1;
-}
 #--re-frame-trace-- .panel-content-scrollable {
   margin: 0 10px;
-  flex: 1 0 auto;
+  flex: 1 1 auto;
   height: 100%;
   overflow: auto;
+}
+#--re-frame-trace-- .tab-contents {
+  display: flex;
+  flex: 1 1 auto;
+  flex-direction: column;
 }
 #--re-frame-trace-- .filter-control {
   margin: 10px 0 0 10px;
